Added lab2 project

--- a/Laboratorium2/Views/Shared/Error.cshtml
+++ b/Laboratorium2/Views/Shared/Error.cshtml
@@ -1,9 +1,13 @@
 ﻿@model ErrorViewModel
-@{
-    ViewData["Title"] = "Error";
+@if (ViewData["Message"] != null)
+{
+    <p>@ViewData["Message"]</p>
 }
-
-<h1 class="text-danger">Error.</h1>
+else
+{
+    <p>Something went wrong!</p>
+}
+@* <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
 @if (Model.ShowRequestId)
@@ -23,3 +27,4 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+ *@
