--- a/Laboratorium2/Views/Shared/_Layout.cshtml
+++ b/Laboratorium2/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Calculator" asp-action="Form">Calculator</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Birth" asp-action="Birth">Birth</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Birth" asp-action="Form">Birth</a>
                         </li>
                     </ul>
                 </div>
