Make everything in english

--- a/Laboratorium_3/Views/Product/Details.cshtml
+++ b/Laboratorium_3/Views/Product/Details.cshtml
@@ -7,38 +7,38 @@
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Nazwa)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Nazwa)
+            @Html.DisplayFor(model => model.Name)
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Cena)
+            @Html.DisplayNameFor(model => model.Price)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Cena)
+            @Html.DisplayFor(model => model.Price)
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Producent)
+            @Html.DisplayNameFor(model => model.Producer)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Producent)
+            @Html.DisplayFor(model => model.Producer)
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DataProdukcji)
+            @Html.DisplayNameFor(model => model.ProductionDate)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DataProdukcji)
+            @Html.DisplayFor(model => model.ProductionDate)
         </dd>
 
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Opis)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Opis)
+            @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
 
