--- a/Laboratorium_3/Views/Product/Edit.cshtml
+++ b/Laboratorium_3/Views/Product/Edit.cshtml
@@ -6,33 +6,33 @@
     <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
-        <label asp-for="Nazwa"></label>
-        <input asp-for="Nazwa" class="form-control" />
-        <span asp-validation-for="Nazwa" class="text-danger"></span>
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Cena"></label>
-        <input asp-for="Cena" class="form-control" />
-        <span asp-validation-for="Cena" class="text-danger"></span>
+        <label asp-for="Price"></label>
+        <input asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Producent"></label>
-        <input asp-for="Producent" class="form-control" />
-        <span asp-validation-for="Producent" class="text-danger"></span>
+        <label asp-for="Producer"></label>
+        <input asp-for="Producer" class="form-control" />
+        <span asp-validation-for="Producer" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="DataProdukcji"></label>
-        <input asp-for="DataProdukcji" type="date" class="form-control" />
-        <span asp-validation-for="DataProdukcji" class="text-danger"></span>
+        <label asp-for="ProductionDate"></label>
+        <input asp-for="ProductionDate" type="date" class="form-control" />
+        <span asp-validation-for="ProductionDate" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Opis"></label>
-        <textarea asp-for="Opis" class="form-control"></textarea>
-        <span asp-validation-for="Opis" class="text-danger"></span>
+        <label asp-for="Description"></label>
+        <textarea asp-for="Description" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
     <button type="submit" class="btn btn-primary">Save Changes</button>
