--- a/Laboratorium_3/Views/Product/Form.cshtml
+++ b/Laboratorium_3/Views/Product/Form.cshtml
@@ -1,45 +1,41 @@
 ﻿@model Laboratorium_3.Models.ProductModel
 
 @{
-    ViewData["Title"] = "Dodaj Produkt";
+    ViewData["Title"] = "Add Product";
 }
 
-<h2>Dodaj Produkt</h2>
+<h2>Add Product</h2>
 
 <form asp-action="Create" method="post" class="needs-validation" novalidate>
     <div class="form-group">
-        <label asp-for="Nazwa"></label>
-        <input asp-for="Nazwa" class="form-control" />
-        <span asp-validation-for="Nazwa" class="text-danger"></span>
+        <label asp-for="Name"></label>
+        <input asp-for="Name" class="form-control" />
+        <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Cena"></label>
-        <input asp-for="Cena" class="form-control" />
-        <span asp-validation-for="Cena" class="text-danger"></span>
+        <label asp-for="Price"></label>
+        <input asp-for="Price" class="form-control" />
+        <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Producent"></label>
-        <input asp-for="Producent" class="form-control" />
-        <span asp-validation-for="Producent" class="text-danger"></span>
+        <label asp-for="Producer"></label>
+        <input asp-for="Producer" class="form-control" />
+        <span asp-validation-for="Producer" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="DataProdukcji"></label>
-        <input asp-for="DataProdukcji" type="date" class="form-control" />
-        <span asp-validation-for="DataProdukcji" class="text-danger"></span>
+        <label asp-for="ProductionDate"></label>
+        <input asp-for="ProductionDate" type="date" class="form-control" />
+        <span asp-validation-for="ProductionDate" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="Opis"></label>
-        <textarea asp-for="Opis" class="form-control"></textarea>
-        <span asp-validation-for="Opis" class="text-danger"></span>
+        <label asp-for="Description"></label>
+        <textarea asp-for="Description" class="form-control"></textarea>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <button type="submit" class="btn btn-primary">Dodaj Produkt</button>
+    <button type="submit" class="btn btn-primary">Add Product</button>
 </form>
-
-@section Scripts {
-    <partial name="_ValidationScriptsPartial" />
-}
