--- a/Laboratorium_3/Views/Product/Index.cshtml
+++ b/Laboratorium_3/Views/Product/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@model List<Laboratorium_3.Models.ProductModel>
 
 @{
-    ViewData["Title"] = "Lista Produktów";
+    ViewData["Title"] = "Product List";
 }
 
-<h2>Lista Produktów</h2>
+<h2>Product List</h2>
 <p>
-    <a asp-action="Create">Dodaj nowy produkt</a>
+    <a asp-action="Create">Add a new product</a>
 </p>
 
 @if (Model.Count > 0)
@@ -14,27 +14,27 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Nazwa</th>
-                <th>Cena</th>
-                <th>Producent</th>
-                <th>Data Produkcji</th>
-                <th>Opis</th>
-                <th>Akcje</th>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Producer</th>
+                <th>Production Date</th>
+                <th>Description</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            @foreach (var produkt in Model)
+            @foreach (var product in Model)
             {
                 <tr>
-                    <td>@produkt.Nazwa</td>
-                    <td>@produkt.Cena</td>
-                    <td>@produkt.Producent</td>
-                    <td>@produkt.DataProdukcji.ToShortDateString()</td>
-                    <td>@produkt.Opis</td>
+                    <td>@product.Name</td>
+                    <td>@product.Price</td>
+                    <td>@product.Producer</td>
+                    <td>@product.ProductionDate.ToShortDateString()</td>
+                    <td>@product.Description</td>
                     <td>
-                        <a asp-action="Details" asp-route-id="@produkt.Id">Szczegóły</a> |
-                        <a asp-action="Edit" asp-route-id="@produkt.Id">Edytuj</a> |
-                        <a asp-action="Delete" asp-route-id="@produkt.Id">Usuń</a>
+                        <a asp-action="Details" asp-route-id="@product.Id">Details</a> |
+                        <a asp-action="Edit" asp-route-id="@product.Id">Edit</a> |
+                        <a asp-action="Delete" asp-route-id="@product.Id">Delete</a>
                     </td>
                 </tr>
             }
@@ -43,5 +43,5 @@
 }
 else
 {
-    <p>Brak produktów do wyświetlenia.</p>
+    <p>No products to display.</p>
 }
