--- a/Laboratorium_4/Views/Product/Form.cshtml
+++ b/Laboratorium_4/Views/Product/Form.cshtml
@@ -7,37 +7,37 @@
 <h2>Add Product</h2>
 
 <form asp-action="Create" method="post" class="needs-validation">
-    <div class="form-group">
+    <div class="form-group mb-4">
         <label asp-for="Name"></label>
         <input asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-4">
         <label asp-for="Price"></label>
         <input asp-for="Price" class="form-control" />
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-4">
         <label asp-for="Producer"></label>
         <input asp-for="Producer" class="form-control" />
         <span asp-validation-for="Producer" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-4">
         <label asp-for="ProductionDate"></label>
         <input asp-for="ProductionDate" type="date" class="form-control" />
         <span asp-validation-for="ProductionDate" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-4">
         <label asp-for="Description"></label>
         <textarea asp-for="Description" class="form-control"></textarea>
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+    <div class="form-group mb-4">
         <label asp-for="Priority" class="control-label"></label>
         <div>
             <span asp-validation-for="Priority" class="text-danger"></span>
