--- a/Laboratorium_6/Views/Product/Form.cshtml
+++ b/Laboratorium_6/Views/Product/Form.cshtml
@@ -37,9 +37,9 @@
         <span asp-validation-for="Description" class="text-danger"></span>
     </div>
 
-    <div class="form-group">
+@*     <div class="form-group">
 w        <select class="form-control" asp-for="OrganizationId" asp-items="@Model.Organizations"></select>
     </div>
-
+ *@
     <button type="submit" class="btn btn-primary">Add Product</button>
 </form>
